--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Astronauta</title>
+    <style>
+        body {
+            background: black url('imagens/espaco.jpg') center center no-repeat fixed;
+            background-size: cover;
+        }
+        div {
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <img src="imagens/astronauta.png" alt="astronauta">
+    </div>
 </body>
 </html>
