--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabelas</title>
 </head>
-
 <body>
-    
+    <h1>Uso de tabelas grandes</h1>
+    <!--
+        ANATONIMIA PARA TABELAS GRANDES
+            THEAD
+                TR, TD, TH
+            TBODY
+                TR, TD,TH
+            TFOOT
+                TR, TD, TH
+    -->
+    <table>
+        <thead>
+            <tr>
+                <th>Estado</th>
+                <th>População</th>
+            </tr>
+        </thead>
+        <tbody>
+            <td>São Paulo</td>
+            <td>44 411 238	</td>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+    </table>
 </body>
 </html>
