--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -26,8 +26,11 @@
             background-color: grey;
             color: white;
         }
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
+        }
         td.num {
-            text-align: right;
+            text-align: right; 
         }
     </style>
 </head>
