--- a/exercícios/ex024/pag001.html
+++ b/exercícios/ex024/pag001.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas Responsivas</title>
+    <title>SIte de Teste</title>
     <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: lightgrey;
+        }
+
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
@@ -31,11 +36,13 @@
         div#container {
             overflow-x: auto;
         }
+
+        tr:nth-child(odd) {
+            background-color: white;
+        }
     </style>
 </head>
 <body>
-    <h1>Tabelas em telas pequenas</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero itaque totam aperiam explicabo architecto modi, quia cum ad quidem tenetur, vitae corrupti, soluta praesentium eius aliquid quibusdam porro vel dolor.</p>
     <div id="container">
         <table>
             <caption>Vendas de produtos por mês</caption>
