--- a/exercícios/ex024/iframe003.html
+++ b/exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores amet accusamus reprehenderit quas odio nihil ex dignissimos distinctio fugit ad debitis blanditiis laborum voluptatum maxime, accusantium recusandae mollitia cum unde! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ipsum suscipit eveniet nisi repudiandae fugit repellat? Ipsa exercitationem, reprehenderit molestias qui numquam, officia quos quis modi in architecto magnam totam!</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi eos quo non ipsam hic voluptates voluptatem suscipit? Hic porro at dolorem eveniet commodi dolor minima? Labore nostrum non quam similique!</p><img src='imagens/imagem.jpg'>">
         <p>Infelizmente seu navegador não é compatível com isso!</p>
     </iframe>
 
